src/mongo/db/repl/sync_tail.cpp
@@ -971,7 +971,11 @@ bool SyncTail::tryPopAndWaitForMore(OperationContext* opCtx,
     // Commands must be processed one at a time. The only exception to this is applyOps because
     // applyOps oplog entries are effectively containers for CRUD operations. Therefore, it is safe
     // to batch applyOps commands with CRUD operations when reading from the oplog buffer.
-    if (entry.isCommand() && entry.getCommandType() != OplogEntry::CommandType::kApplyOps) {
+    // Oplog entries on 'system.views' should also be processed one at a time. View catalog
+    // immediately reflects changes for each oplog entry so we can see inconsistent view catalog if
+    // multiple oplog entries on 'system.views' are being applied out of the original order.
+    if ((entry.isCommand() && entry.getCommandType() != OplogEntry::CommandType::kApplyOps) ||
+        entry.getNamespace().isSystemDotViews()) {
         if (ops->getCount() == 1) {
             // apply commands one-at-a-time
             _consume(opCtx, oplogBuffer);
